switch literal numbers to bigDecimal